# KinSim

./: .gitignore  CLAUDE.md  README.md  commit.txt  kinsim_input_strepto_prepared.txt  path_strepto_extract.sh  pyproject.toml  requirements.txt  resume.txt
cluster/: config.yaml  config_strains.txt
cluster/scripts/: bam_extract_mean.py  build_kmer_lookup.py  generate_config.sh  merge_lookups.py  parse_bam_signals.py
cluster/slurm/: bam_extract_mean.slurm  build_kmer_lookup.slurm  kinsim_sim_normal_signals.slurm  merge_lookups.slurm  parse_bam_signals.slurm  test_kmer_extraction.slurm
cluster_tests/: config.yaml
cluster_tests/Tests/: bam_files_to_process.txt  prepare_verification.test  prepare_verified.test  strains_stats.csv
cluster_tests/Tests/scripts/: kinsim_sim_normal_signals.py  strain_plotly.py  test_kmer_extraction.py
cluster_tests/Tests/slurm/: PBSIM3.slurm  fetch_genomes.slurm  kinsim_inject.slurm  (+3 more)
dictionary_test/: kinsim_input_strepto.txt  kinsim_strepto_prepared.txt
kinsim/: __init__.py  __main__.py  encoding.py  motifs.py  prepare.py  rebase_parser.py
kinsim.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
kinsim/cgan/: __init__.py  generate.py  model.py  parse_train.py  train.py
kinsim/dictionary/: __init__.py  analyze.py  inject.py  train.py
slurm_kinsim/: kinsim_analyze.slurm  kinsim_cgan_extract.slurm  kinsim_cgan_generate.slurm  kinsim_cgan_train.slurm  kinsim_inject.slurm  kinsim_inject_alone.slurm  kinsim_merge.slurm  kinsim_pipeline.sh  kinsim_prepare.slurm  kinsim_train.slurm  pbsim3_simulate.slurm
